Add ScheduleingUrl in schedule point response
